# wal-rust

./: .gitignore  AGENTS.md  CONSTRUCTION.md  Cargo.toml  README.md  _lsp_test.wal  benchmark.wal  test_load.wal  tilelink.wal  verify.sh  verify_vcd.wal
.memsearch/: .last_msg_time
.memsearch/memory/: 2026-04-21.md  2026-04-22.md  2026-04-23.md  2026-04-24.md  2026-04-26.md
docs/: WAL_APPENDIX.md  WAL_LANG_SPEC.md  wal-编程手册.html  wal-编程手册.md
scripts/: bench_wal.sh
src/: cli.rs  lib.rs  main.rs
src/fst/: blocks.rs  compress.rs  mod.rs  reader.rs  types.rs  varint.rs  writer.rs
src/trace/: container.rs  fst.rs  mod.rs  trace.rs  vcd.rs
src/vcd/: convert.rs  mod.rs  parallel_convert.rs  parser.rs  reader.rs  types.rs
src/wal/: mod.rs
src/wal/ast/: closure.rs  macro_def.rs  mod.rs  operator.rs  symbol.rs  value.rs  wlist.rs
src/wal/builtins/: array.rs  bitwise.rs  convert.rs  core.rs  list.rs  math.rs  mod.rs  scope.rs  signal.rs  special.rs  tilelink.rs  types.rs  virtual_sig.rs
src/wal/eval/: dispatch.rs  environment.rs  evaluator.rs  mod.rs  semantic.rs
test_samples/: fst_check.wal  run_spec_test.sh  run_tests.sh  spec_audit.wal  spec_test.wal  test_fst_analysis.wal
tests/: debug_vcd2fst_test.rs  fst_debug_test.rs  fst_writer_test.rs  gtkwave_fst_test.rs  gtkwave_testfst_test.rs  trace_test.rs  vcd_correctness_test.rs  wal_integration_test.rs  x1_test.rs  x2_test.rs
tools/: gen_vcd.rs
tree-sitter-wal/: Cargo.toml  build.rs  grammar.js  package.json
tree-sitter-wal/src/: bindings.rs  grammar.json  lib.rs  node-types.json  parser.c
(+6 files in other folders)
